--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Pompiere&display=swap"
     rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./images/phishLogo.png" type="image/png">
   <link rel="apple-touch-icon" sizes="180x180" href="./images/phishLogo.png">
   <link rel="icon" href="./images/phishLogo.png" type="image/png">
