--- a/canvas/index.html
+++ b/canvas/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <canvas id="myCanvas" width="500" height="500"></canvas>
+    <canvas id="bubble-canvas" width="500" height="500"></canvas>
     <script src="canvas.js"></script>
 </body>
 </html>
